baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__01_lexer__field_index_access.snap
---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
Slash "/"
Slash "/"
Word "Test"
Word "field"
Word "access"
Word "and"
Word "index"
Word "access"
Word "expressions"
Class "class"
Word "User"
LBrace "{"
Word "name"
Word "string"
Word "age"
Word "int"
Word "profile"
Word "Profile"
Word "tags"
Word "string"
LBracket "["
RBracket "]"
RBrace "}"
Class "class"
Word "Profile"
LBrace "{"
Word "bio"
Word "string"
Word "settings"
Word "Settings"
RBrace "}"
Class "class"
Word "Settings"
LBrace "{"
Word "theme"
Word "string"
RBrace "}"
Function "function"
Word "FieldAccess"
LParen "("
Word "user"
Word "User"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Slash "/"
Slash "/"
Word "Simple"
Word "field"
Word "access"
Let "let"
Word "name"
Equals "="
Word "user"
Dot "."
Word "name"
Slash "/"
Slash "/"
Word "Nested"
Word "field"
Word "access"
Let "let"
Word "bio"
Equals "="
Word "user"
Dot "."
Word "profile"
Dot "."
Word "bio"
Slash "/"
Slash "/"
Word "Deep"
Word "nesting"
Let "let"
Word "theme"
Equals "="
Word "user"
Dot "."
Word "profile"
Dot "."
Word "settings"
Dot "."
Word "theme"
Return "return"
Word "theme"
RBrace "}"
Function "function"
Word "IndexAccess"
LParen "("
Word "users"
Word "User"
LBracket "["
RBracket "]"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Slash "/"
Slash "/"
Word "Array"
Word "indexing"
Word "with"
Word "literal"
Let "let"
Word "first"
Equals "="
Word "users"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Slash "/"
Slash "/"
Word "Array"
Word "indexing"
Word "with"
Word "variable"
Let "let"
Word "idx"
Equals "="
IntegerLiteral "1"
Let "let"
Word "second"
Equals "="
Word "users"
LBracket "["
Word "idx"
RBracket "]"
Slash "/"
Slash "/"
Word "Nested"
Colon ":"
Word "array"
Word "element"
Word "field"
Word "access"
Let "let"
Word "firstName"
Equals "="
Word "users"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Dot "."
Word "name"
Slash "/"
Slash "/"
Word "Deeply"
Word "nested"
Colon ":"
Word "field"
Word "then"
Word "index"
Word "then"
Word "field"
Let "let"
Word "tag"
Equals "="
Word "users"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Dot "."
Word "tags"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Return "return"
Word "firstName"
RBrace "}"
Function "function"
Word "MixedAccess"
LParen "("
Word "user"
Word "User"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Slash "/"
Slash "/"
Word "Field"
Word "access"
Word "then"
Word "array"
Word "index"
Let "let"
Word "firstTag"
Equals "="
Word "user"
Dot "."
Word "tags"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Slash "/"
Slash "/"
Word "Multiple"
Word "indexes"
Let "let"
Word "nestedAccess"
Equals "="
Word "user"
Dot "."
Word "profile"
Dot "."
Word "settings"
Dot "."
Word "theme"
Return "return"
Word "firstTag"
RBrace "}"
