baml_language/crates/baml_tests/snapshots/parser_expressions/baml_tests__parser_expressions__01_lexer__mixed_field_index_access.snap
---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
Slash "/"
Slash "/"
Word "Test"
Word "mixed"
Word "field"
Word "and"
Word "index"
Word "access"
Word "expressions"
Class "class"
Word "User"
LBrace "{"
Word "name"
Word "string"
Word "profile"
Word "Profile"
Word "tags"
Word "string"
LBracket "["
RBracket "]"
RBrace "}"
Class "class"
Word "Profile"
LBrace "{"
Word "bio"
Word "string"
Word "settings"
Word "Settings"
RBrace "}"
Class "class"
Word "Settings"
LBrace "{"
Word "theme"
Word "string"
RBrace "}"
Function "function"
Word "MixedAccess"
LParen "("
Word "user"
Word "User"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Slash "/"
Slash "/"
Word "Field"
Word "access"
Word "then"
Word "array"
Word "index"
Let "let"
Word "firstTag"
Equals "="
Word "user"
Dot "."
Word "tags"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Semicolon ";"
Slash "/"
Slash "/"
Word "Nested"
Word "field"
Word "access"
LParen "("
For "for"
Word "comparison"
RParen ")"
Let "let"
Word "nestedAccess"
Equals "="
Word "user"
Dot "."
Word "profile"
Dot "."
Word "settings"
Dot "."
Word "theme"
Semicolon ";"
Return "return"
Word "firstTag"
Semicolon ";"
RBrace "}"
